# SourcemodCompileManager

./: .gitignore  CMakeLists.txt  README.md
Debug/: SourcemodCompileManager  makefile  sources.mk
Debug/src/: .gitignore  subdir.mk
Debug/src/base/: subdir.mk
Default/: SourcemodCompileManager
src/: SourcemodCompileManager.cpp  SourcemodCompileManager.h
src/base/: CompileResult.h  Compiler.cpp  Compiler.h  SCMErrors.cpp  SCMErrors.h
src/formatter/: Formatter.cpp  Formatter.h
